changes to scholarregister, openscholar_default

--- a/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
@@ -43,10 +43,14 @@
 #scholarregister-signup-form,
 #edit-password-wrapper,
 #domain-field,
-#edit-send-mail-wrapper,
 .page-site #container #domain-suffix {
   border-top: 1px solid #ddd;
   padding-top: 8px;
+  }
+
+#edit-send-mail-wrapper {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 8px;
   }
 
 #domain-field .field-prefix,
@@ -62,4 +66,9 @@
 #domain-field .description {
   clear:left;
   margin: 3px 0;
+  }
+
+#success-message {
+  clear:both;
+  font-weight:bold;
   }
