design: changed css and js to match new form id, changed form theme function to use new element names, made sure right theme and submit were attached to form.

--- a/sites/all/modules/openscholar_vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/openscholar_vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -1,4 +1,4 @@
-#cp-content .innerframe #cp-settings-theme form#cp-settings-form, #cp-content .innerframe #cp-settings-theme form#cp-settings-form fieldset {
+#cp-content .innerframe #cp-settings-theme form#vsite-design-theme-picker-form, #cp-content .innerframe #cp-settings-theme form#vsite-design-theme-picker-form fieldset {
   margin:0;
   padding: 0;
   }
@@ -30,14 +30,14 @@ ul.theme-picker li.checked img {
   margin-top: 0;
   }
 
-#cp-settings-form #next, #cp-settings-form #prev {
+#vsite-design-theme-picker-form #next, #vsite-design-theme-picker-form #prev {
   width: 15px;
   height: 14px;
   background: transparent url(images/arrows.png) 0 0 no-repeat;
   margin-top: 3px;
   }
 
-#cp-settings-form #prev {
+#vsite-design-theme-picker-form #prev {
   background-position: 0 -14px;
   }
 
@@ -109,11 +109,11 @@ ul.theme-picker li.checked h3, .item-theme-picker li.checked .form-item {
   color: #fff;
   }
 
-form#cp-settings-form div.form-radios {
+form#vsite-design-theme-picker-form div.form-radios {
   display:none;
 }
 
-#cp-settings-form  {
+#vsite-design-theme-picker-form  {
   clear: both;
   }
 
