--- a/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic-ie8.css
+++ b/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic-ie8.css
@@ -1,4 +1,4 @@
-#container {
+.wrap {
   background: transparent;
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000,endColorstr=#66000000)";
   zoom: 1;
