--- a/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy-ie.css
+++ b/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy-ie.css
@@ -15,6 +15,6 @@ body.two-sidebars #sidebar-first, body.sidebar-first #sidebar-first, body.two-si
   left: 0;
   }
 
-#content-wrapper, #sidebar-first h3, #sidebar-second h3 {
+#content-area .hg-container, #sidebar-first h3, #sidebar-second h3 {
   _zoom:1;
   }
