--- a/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy.css
+++ b/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy.css
@@ -79,12 +79,12 @@ body {
 
 /* LAYOUT */
 
-#wrapper {
+#page {
   background: url('images/body-bg.png') repeat-x #373c3e;
   padding-top: 15px;
   }
 
-#container {
+.wrap {
   width: 970px;
   margin: 0 auto;
   }
@@ -117,7 +117,7 @@ body.header-left-main-right #navbar {
   right: 0;
   }
 
-#content-wrapper {
+#content-area .hg-container {
   background: #fdfdfd;
   overflow:hidden;
   padding-top: 10px;
@@ -154,7 +154,7 @@ body.no-sidebars #content-main {
   padding-left:0;
   }
 
-#header-wrapper {
+#header .hg-container {
   padding-left: 190px;
   }
 
