--- a/sites/all/themes/openscholar/scholar_density/scholar-density.css
+++ b/sites/all/themes/openscholar/scholar_density/scholar-density.css
@@ -57,12 +57,12 @@ h3 {
   height: 140px;
   }
 
-#wrapper {
+#page {
   min-height: 100%;
   overflow: hidden;
   }
 
-body.admin-menu #wrapper {
+body.admin-menu #page {
   margin-top: 22px;
   }
 
@@ -114,11 +114,11 @@ body.admin-menu #wrapper {
   padding: 0;
   }
 
-#header-wrapper {
+#header .hg-container {
   padding: 0 !important;
   }
 
-#content-wrapper  {
+#content-area .hg-container  {
   margin-left: 202px;
   clear:none;
   padding-left:164px;
