--- a/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
+++ b/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
@@ -7,11 +7,11 @@ body {
     font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
-#wrapper {
+#page {
   background: url(images/body-bg.png) repeat-x 0 0 #fff;
   }
 
-#container {
+.wrap {
     width: 910px;
     margin: 0 auto;
     }
@@ -61,12 +61,12 @@ h1 a, h2 a, h3 a, #sidebar-second a {
   padding-right: 0;
   }
 
-#content-wrapper, #header-wrapper {
+#content-area .hg-container, #header .hg-container {
     padding-left: 190px;
     padding-right: 230px
     }
 
-body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
+body.sidebar-first #content-area .hg-container, body.header-left-main #header .hg-container {
   padding-right: 20px;
   }
 
@@ -95,7 +95,7 @@ body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
     color: #FFF;
     }
 
-#header-wrapper {
+#header .hg-container {
     height: 165px;
     }
 
