--- a/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
+++ b/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
@@ -6,7 +6,7 @@ body {
 
 /* TYPOGRAPHY*/
 
-#content-wrapper a {
+#content-area .hg-container a {
   text-decoration:underline;
   }
 
@@ -43,17 +43,17 @@ p.copy {
 
 /* LAYOUT ELEMENTS */
 
-#container {
+.wrap {
   background: url(images/bg.png) repeat-y 0 0 transparent;
   width: 1096px;
   margin:auto;
   padding-top:0;
   }
 
-#content-wrapper,
-.sidebar-first #content-wrapper,
-.sidebar-second #content-wrapper,
-.no-sidebars #content-wrapper {
+#content-area .hg-container,
+.sidebar-first #content-area .hg-container,
+.sidebar-second #content-area .hg-container,
+.no-sidebars #content-area .hg-container {
   padding:0;
   }
 
@@ -70,7 +70,7 @@ p.copy {
   padding-left: 38px;
   }
 
-#header-wrapper {
+#header .hg-container {
   padding-left: 212px;
   padding-right: 265px;
   margin-top:12px;
@@ -81,7 +81,7 @@ p.copy {
 
 #header,
 #footer,
-#content-wrapper {
+#content-area .hg-container {
   padding-right: 48px;
   padding-left: 48px;
   }
@@ -132,19 +132,19 @@ p.copy {
   width: 457px;
   }
 
-body.header-main #header-wrapper,
-body.header-main-right #header-wrapper {
+body.header-main #header .hg-container,
+body.header-main-right #header .hg-container {
   padding-left: 37px;
   }
 
-body.two-sidebars #content-wrapper,
-body.sidebar-second #content-wrapper,
-body.sidebar-first #content-wrapper,
-body.no-sidebars #content-wrapper {
+body.two-sidebars #content-area .hg-container,
+body.sidebar-second #content-area .hg-container,
+body.sidebar-first #content-area .hg-container,
+body.no-sidebars #content-area .hg-container {
   padding-left: 85px;
   }
 
-body.no-sidebars #content-wrapper {
+body.no-sidebars #content-area .hg-container {
   width:auto;
   padding-right: 85px;
   }
@@ -218,8 +218,8 @@ body.no-sidebars #content-wrapper {
   padding-left: 0;
   }
 
-.header-main #header-wrapper,
-.header-main-right #header-wrapper {
+.header-main #header .hg-container,
+.header-main-right #header .hg-container {
   padding-right:254px;
   }
 
@@ -335,7 +335,7 @@ body.no-sidebars #content-wrapper {
 
 /*Footer */
 
-#footer-inner {
+#footer .wrap {
   padding: 34px 37px;
   background:#c7d0d2;
   height:33px;
