--- a/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
+++ b/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
@@ -5,7 +5,8 @@ body {
 
 /*TYPOGRAPHY*/
 
-a, a:visited {
+a,
+a:visited {
   color: #006e97;
   }
 
@@ -13,12 +14,15 @@ a:hover {
   color: #000;
   }
 
-#header h1 a, #header h1 a:visited, #header h2, #header p, #header p a, #header p a:visited {
+#header h1 a,
+#header h1 a:visited,
+#header h2, #header p,
+#header p a,
+#header p a:visited {
   color: #fff;
   font-weight: normal;
   letter-spacing: -1px;
   }
-
 
 #header h1 {
   font-size: 23px;
@@ -39,13 +43,17 @@ a:hover {
   margin-top: 10px;
   }
 
-#sidebar-first h3, #sidebar-second h3, #sidebar-second div.litecal .litecal-title h3.litecal-title, #sidebar-first div.litecal .litecal-title h3.litecal-title {
+#sidebar-first h3,
+#sidebar-second h3,
+#sidebar-second div.litecal .litecal-title h3.litecal-title,
+#sidebar-first div.litecal .litecal-title h3.litecal-title {
   font-size: 14px;
   line-height: 17px;
   text-transform: uppercase;
   }
 
-.block-vsite_menus li a, .block-vsite_menus li a:visited {
+.block-vsite_menus li a,
+.block-vsite_menus li a:visited {
   color: #ec8501;
   font-weight: bold;
   }
@@ -56,27 +64,28 @@ a:hover {
 
 /* LAYOUT */
 
-#wrapper {
+#page {
   margin-top: 7px;
   }
 
-#container {
+.wrap {
   width: 954px;
   background: rgba(0,0,0,.40);
   margin: 0 auto;
   padding: 21px 23px;
   }
 
-#header, #footer {
+#header .wrap,
+#footer .wrap {
   padding-bottom:90px;
   background: url(images/header-footer.png) no-repeat 540px 100% transparent;
   }
 
-#footer {
+#footer .wrap {
   background-position: 100% 0;
   }
 
-.one-sidebar #header{
+.one-sidebar #header {
   background-position: 748px 100%;
   }
 
@@ -84,29 +93,32 @@ a:hover {
   background-position: 748px 0;
   }
 
-.no-sidebars #header, .no-sidebars #footer {
+.no-sidebars #header,
+.no-sidebars #footer {
   background: transparent;
   }
 
-#content-wrapper {
+#content-area .hg-container {
   background: url(images/main-wrapper.png) 0 0 repeat-y #fff;
   overflow:auto;
   padding: 30px 0;
   }
 
-#content-wrapper .column {
+#content-area .hg-container .column {
   position: static;
   }
 
-.one-sidebar #content-wrapper {
+.one-sidebar #content-area .hg-container {
   background-position: -953px 0;
   }
 
-.no-sidebars #content-wrapper {
+.no-sidebars #content-area .hg-container {
   background: #fff;
   }
 
-#content-main, .one-sidebar #content-main, .no-sidebars #content-main{
+#content-main,
+.one-sidebar #content-main,
+.no-sidebars #content-main{
   padding: 0 33px;
   }
 
@@ -124,7 +136,8 @@ a:hover {
   border: 1px solid #5e5c58;
   }
 
-#sidebar-first, #sidebar-second {
+#sidebar-first,
+#sidebar-second {
   right: auto;
   margin-left: 0;
   margin-right: 0;
@@ -132,7 +145,8 @@ a:hover {
   padding: 0 20px;
   }
 
-#header-left, #header-right {
+#header-left,
+#header-right {
   width:68px;
   padding-left: 0;
   padding-right: 0;
@@ -147,7 +161,7 @@ a:hover {
   margin-right: -88px;
   }
 
-#header-wrapper {
+#header .hg-container {
   padding-left: 68px;
   padding-right: 88px;
   }
@@ -156,7 +170,7 @@ a:hover {
   width: 55px;
   }
 
-.navbar-on #header-wrapper {
+.navbar-on #header .hg-container {
   float: left;
   width: 473px;
   }
