--- a/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
+++ b/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
@@ -65,7 +65,7 @@ p.copy {
 
 /* LAYOUT ELEMENTS */
 
-#container {
+.wrap {
   width: 1012px;
   margin: 0 auto;
   padding-top: 1px;
@@ -92,14 +92,14 @@ p.copy {
   padding-left: 38px;
   }
 
-#content-wrapper,
-#header-wrapper {
+#content-area .hg-container,
+#header .hg-container {
   padding-left: 212px;
   padding-right: 265px;
   }
 
 
-#content-wrapper {
+#content-area .hg-container {
   }
 
 #footer {
@@ -114,32 +114,32 @@ p.copy {
   padding: 0 33px;
   }
 
-body.sidebar-first #container,
+body.sidebar-first .wrap,
 body.sidebar-first #header,
 body.two-sidebars #footer {
   background-position: -1012px 0;
   }
 
-body.sidebar-second #container,
+body.sidebar-second .wrap,
 body.no-sidebars #header,
 body.no-sidebars #footer {
   background-position: -2024px 0;
   }
 
-body.no-sidebars #container,
+body.no-sidebars .wrap,
 body.navbar-off #header,
-body.navbar-off #container  {
+body.navbar-off .wrap  {
   background-position: -3036px 0;
   }
 
 body.no-sidebars #header,
-body.no-sidebars #content-wrapper,
-body.sidebar-second #content-wrapper,
+body.no-sidebars #content-area .hg-container,
+body.sidebar-second #content-area .hg-container,
 body.no-sidebars #footer {
   padding-left: 43px;
   }
 
-body.sidebar-first #content-wrapper {
+body.sidebar-first #content-area .hg-container {
   padding-left: 210px;
   }
 
@@ -161,11 +161,11 @@ body.navbar-off #sidebar-first {
   padding-top: 23px;
   }
 
-#header-wrapper {
+#header .hg-container {
   height: 123px;
   }
 
-.header-main #header-wrapper, .header-main-right #header-wrapper {
+.header-main #header .hg-container, .header-main-right #header .hg-container {
   padding-right:250px;
   }
 
