--- a/sites/all/themes/openscholar/scholar_collector/scholar-collector.css
+++ b/sites/all/themes/openscholar/scholar_collector/scholar-collector.css
@@ -40,7 +40,7 @@ body.two-sidebars #header {
     z-index:50;
     }
 
-#container {
+.wrap {
     width: 1000px;
     margin: 0 auto;
     padding-bottom: 213px;
@@ -160,21 +160,21 @@ body.two-sidebars #header-left {
   margin-right: -275px;
   }
 
-#header-wrapper, #content-wrapper {
+#header .hg-container, #content-area .hg-container {
   width: auto;
   }
 
-#header-wrapper {
+#header .hg-container {
   padding-left: 195px;
   padding-right: 259px;
   }
 
-body.sidebar-first #header-wrapper,
-body.two-sidebars #header-wrapper {
+body.sidebar-first #header .hg-container,
+body.two-sidebars #header .hg-container {
   padding-right: 205px;
   }
 
-#content-wrapper {
+#content-area .hg-container {
   padding-left: 195px;
   padding-right: 275px;
   }
@@ -191,11 +191,11 @@ body.two-sidebars #header-wrapper {
   margin-bottom: .7em;
   }
 
-body.sidebar-first #content-wrapper {
+body.sidebar-first #content-area .hg-container {
   padding-right: 70px;
   }
 
-body.no-sidebars #content-wrapper {
+body.no-sidebars #content-area .hg-container {
   padding-right: 35px;
   padding-left: 35px;
   }
@@ -242,7 +242,7 @@ body.header-main #block-scholar-1, body.header-main-right #block-scholar-1 {
   min-height: 112px;
   }
 
-body.sidebar-second #header-wrapper {
+body.sidebar-second #header .hg-container {
   margin: 0;
   }
 
