--- a/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
@@ -8,11 +8,11 @@ body {
     font: 15px/normal 'Book Antiqua', garamond, 'times new roman', times, serif;
     }
 
-#wrapper {
+#page {
   padding-top: 10px;
   }
 
-#container {
+.wrap {
     width: 950px;
     margin: 0 auto;
     background:url(../images/bg.png) top center repeat-y #434f4d;
@@ -81,7 +81,7 @@ img {
   border-right: 1px solid #ccc;
   }
 
-body.header-left-main #header-wrapper {
+body.header-left-main #header .hg-container {
   padding-right: 0;
   }
 
@@ -95,29 +95,29 @@ body.header-left-main #header-wrapper {
   margin-right: -136px;
   }
 
-#content-wrapper, #header-wrapper {
+#content-area .hg-container, #header .hg-container {
   padding-left: 226px;
   padding-right: 246px;
   }
 
-#content-wrapper {
+#content-area .hg-container {
   padding-left: 196px;
   }
 
-#header-wrapper {
+#header .hg-container {
   padding-right: 136px;
   height: 145px;
   }
 
-body.sidebar-second #content-wrapper {
+body.sidebar-second #content-area .hg-container {
   padding-left: 60px;
   }
 
-body.sidebar-first #content-wrapper {
+body.sidebar-first #content-area .hg-container {
   padding-right: 50px;
   }
 
-body.no-sidebars #content-wrapper {
+body.no-sidebars #content-area .hg-container {
   padding: 0 55px;
   }
 
