--- a/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
+++ b/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
@@ -3,7 +3,7 @@ body {
   color:#333;
   }
 
-#container {
+.wrap {
   max-width: 1260px;
   min-width: 780px;
   padding-right: 15px;
@@ -48,7 +48,7 @@ h2.title {
 
 /* LAYOUT */
 
-#content-wrapper .column {
+#content-area .hg-container .column {
   padding:0;
   }
 
@@ -61,7 +61,7 @@ h2.title {
     padding-top: 1px;
     }
 
-#content-wrapper .column {
+#content-area .hg-container .column {
   padding:0;
   }
 
@@ -89,16 +89,16 @@ h2.title {
   margin-right: -210px;
   }
 
-body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
+body.sidebar-first #content-area .hg-container, body.header-left-main #header .hg-container {
   padding-right: 0;
   }
 
-#header-wrapper {
+#header .hg-container {
   padding-left: 190px;
   padding-right: 210px;
   }
 
-#content-wrapper {
+#content-area .hg-container {
   padding-left: 180px;
   padding-right: 180px;
   padding-top: 20px;
