--- a/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
+++ b/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
@@ -17,16 +17,16 @@ body.cp-toolbar-full {
   background-position: 0 42px;
   }
 
-#wrapper {
+#page {
   background: url(images/body-bg.png) repeat-x left top #fff;
   }
 
-body.navbar-off #wrapper {
+body.navbar-off #page {
   background: url(images/body-bg-alt.png) repeat-x 0 100% #fff;
   padding-bottom: 180px;
   }
 
-#container {
+.wrap {
   width: 910px;
   margin: 0 auto;
   }
@@ -81,12 +81,12 @@ h2.title {
   padding-right: 0;
   }
 
-#content-wrapper, #header-wrapper {
+#content-area .hg-container, #header .hg-container {
     padding-left: 190px;
     padding-right: 230px
     }
 
-body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
+body.sidebar-first #content-area .hg-container, body.header-left-main #header .hg-container {
   padding-right: 20px;
   }
 
@@ -121,7 +121,7 @@ body.navbar-off #header {
   height:150px;
   }
 
-#header-wrapper {
+#header .hg-container {
     height: 160px;
     }
 
