--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -87,7 +87,6 @@ body.admin-menu #top {
   top: 22px;
   }
 
-
 body.cp-toolbar-mini #top ul.links {
   background: url('../images/toolbar-mini-tab.png') no-repeat 0 0;
   height: 22px;
@@ -95,14 +94,11 @@ body.cp-toolbar-mini #top ul.links {
   padding-right: 6px;
   }
 
-
 /* LAYOUT */
 
 /* The following is the scheme for flexible one, two, or three column layouts
   Read more about this method at http://www.alistapart.com/articles/holygrail/
 */
-
-
 
 body.no-sidebars #content-main,
 body.header-main #header-main {
@@ -207,10 +203,14 @@ body.header-left-right #header-right {
   clear:both;
   }
 
+#navbar {
+  padding: 5px;
+  }
+
 /* FOOTER */
 
 #footer {
-  padding-top: 50px;
+  padding: 50px 0 5px;
   }
 
 #footer .block,
