--- a/sites/all/themes/openscholar/scholar_redhead/flavors/blue/blue.css
+++ b/sites/all/themes/openscholar/scholar_redhead/flavors/blue/blue.css
@@ -1,13 +1,10 @@
 /*Blue version*/
 
-#wrapper {
-  background-image: url(images/body-bg-blue.png);
+#header,
+#navbar {
+  background: #416f9d;
   }
 
 a, a:visited {
   color: #416f9d;
-  }
-
-#navbar li {
-  background: #416f9d;
   }
