--- a/sites/all/themes/openscholar/scholar_redhead/flavors/grey/grey.css
+++ b/sites/all/themes/openscholar/scholar_redhead/flavors/grey/grey.css
@@ -1,13 +1,10 @@
 /*Grey version*/
 
-#wrapper  {
-  background-image: url(images/body-bg-grey.png);
+#header,
+#navbar {
+  background: #888;
   }
 
 a, a:visited {
   color: #888;
-  }
-
-#navbar li {
-  background: #888888;
   }
