--- a/sites/all/themes/openscholar/scholar_redhead/flavors/olive/olive.css
+++ b/sites/all/themes/openscholar/scholar_redhead/flavors/olive/olive.css
@@ -1,13 +1,9 @@
 /*Olive version*/
 
-#wrapper  {
-  background-image: url(images/body-bg-olive.png);
+#header,
+#navbar {
+  background: #6d792b;
   }
-
 a, a:visited {
   color: #6d792b;
-  }
-
-#navbar li {
-  background: #6d792b;
   }
