--- a/sites/all/themes/openscholar/scholar_redhead/flavors/opal/opal.css
+++ b/sites/all/themes/openscholar/scholar_redhead/flavors/opal/opal.css
@@ -1,13 +1,10 @@
 /*Opal version*/
 
-#wrapper {
-  background-image: url(images/body-bg-opal.png);
+#header,
+#navbar {
+  background: #4c6673;
   }
 
 a, a:visited {
   color: #4c6673;
-  }
-
-#navbar li {
-  background: #4c6673;
   }
