--- a/sites/all/themes/openscholar/scholar_redhead/flavors/orange_brown/orange_brown.css
+++ b/sites/all/themes/openscholar/scholar_redhead/flavors/orange_brown/orange_brown.css
@@ -1,13 +1,9 @@
 /*Orange Brown version*/
 
-#wrapper  {
-  background-image: url(images/body-bg-brown.png);
+#header,
+#navbar {
+  background: #a25d3c;
   }
-
 a, a:visited {
   color: #a25d3c;
-  }
-
-#navbar li {
-  background: #a25d3c;
   }
