--- a/sites/all/themes/openscholar/scholar_stripy/flavors/brown/brown.css
+++ b/sites/all/themes/openscholar/scholar_stripy/flavors/brown/brown.css
@@ -1,15 +1,11 @@
 /* Brown*/
 
-body {
-  background:#705d25;
+body.navbar-off {
+  background:#C07354;
   }
 
-#wrapper {
-  background-image: url(images/body-bg-brown.png);
-  }
-
-body.navbar-off #wrapper {
-  background-image: url(images/body-bg-alt-brown.png);
+#nav {
+  background-image: url(images/nav-brown.png);
   }
 
 a, a:visited {
