--- a/sites/all/themes/openscholar/scholar_redhead/flavors/black/black.css
+++ b/sites/all/themes/openscholar/scholar_redhead/flavors/black/black.css
@@ -1,13 +1,10 @@
 /*Black version*/
 
-#wrapper  {
-  background-image: url(images/body-bg-black.png);
+#header,
+#navbar {
+  background: #A03A25;
   }
 
 a, a:visited {
   color: #888;
-  }
-
-#navbar li {
-  background: #000;
   }
