--- a/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
+++ b/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
@@ -1,10 +1,5 @@
-
-html {
-    min-width: 910px;
-    }
-
 body {
-    background: #bc613c;
+    background: #C07354;
     color:#282828;
     font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
@@ -17,10 +12,6 @@ body.cp-toolbar-full {
   background-position: 0 42px;
   }
 
-#page {
-  background: url(images/body-bg.png) repeat-x left top #fff;
-  }
-
 body.navbar-off #page {
   background: url(images/body-bg-alt.png) repeat-x 0 100% #fff;
   padding-bottom: 180px;
@@ -31,7 +22,8 @@ body.navbar-off #page {
   margin: 0 auto;
   }
 
-a, a:visited {
+a,
+a:visited {
     color:#b54f26;
     text-decoration: underline;
     }
@@ -70,23 +62,26 @@ h2.title {
 
 /* LAYOUT ELEMENTS */
 
-
-#sidebar-first, #header-left {
+#sidebar-first,
+#header-left {
     width: 180px;
     padding-left: 0;
     right: 210px;
     }
 
-#sidebar-second, #header-right {
+#sidebar-second,
+#header-right {
   padding-right: 0;
   }
 
-#content-area .hg-container, #header .hg-container {
-    padding-left: 190px;
-    padding-right: 230px
-    }
+#content-area .hg-container,
+#header .hg-container {
+  padding-left: 190px;
+  padding-right: 230px
+  }
 
-body.sidebar-first #content-area .hg-container, body.header-left-main #header .hg-container {
+body.sidebar-first #content-area .hg-container,
+body.header-left-main #header .hg-container {
   padding-right: 20px;
   }
 
@@ -107,22 +102,11 @@ body.two-sidebars #sidebar-first {
     font-size: .9em;
     }
 
-
 /* HEADER ELEMENTS */
 
 
 #header {
-    height: 200px;
-    margin-bottom: 26px;
-    padding-top: 25px;
-    }
-
-body.navbar-off #header {
-  height:150px;
-  }
-
-#header .hg-container {
-    height: 160px;
+    padding: 25px 0 15px;
     }
 
 #header h1 {
@@ -148,6 +132,8 @@ body.navbar-off #header {
     }
 
 #navbar {
+  background:url('images/nav.png') repeat-x 0 0 #fff;
+  padding: 8px 0 15px 0;
   height: 40px;
   line-height: 40px;
   }
